# lite-nl2sql

./: README.md  pyproject.toml  requirements.txt
src/: dataset.py
src/lite_nl2sql/: config.py  evaluate.py  exceptions.py  finetune.py  predict.py  trainer.py
src/lite_nl2sql/eval/: __init__.py  evaluation.py  evaluation_api.py  exec_eval.py
